tests/valid/test_type_76.wyal
assert:
   forall(int[] xs, {any f} y):
       if:
          y.f is int
       then:
          xs[y.f] is int
