tests/invalid/test_101.wyal
type Entry is ({int key, int value} r)

define Map(Entry[] entries) is:
    forall(int i1, int i2):
        if:
            entries[i1].key == entries[i2].key
        then:
            i1 == i2

define InvMap(Entry[] entries) is:
    forall(int i1, int i2):
        if:
            entries[i1].value == entries[i2].value
        then:
            i1 == i2


assert:
   forall(Entry[] xs):
     Map(xs) ==> InvMap(xs)

